    - Quicker map tagging using right-click (via "Quick Map Tag")
    - Thicker power cables and logic wires(via "Thicker Power Wires")
    - Show unfulfilled requests in the current logistic network (via "What's Missing?")
    - Rename locomotives, labs, roboports, and radars (via "Renamer")
    - Pick-up leftover items alongside inserters (via "Pick It Up")
  Bugfixes:
---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 2022-07-20
  Changes:
    - Replaced "Construction Planner" with "Construction Planner Continued" mod. Although it should be a drop-in replacement, make sure to backup the savegame before updating the modpack.
    - Replaced "Quick Swap" with "Quickbar Vertical Swap" mod. Provides more features, and preserves blueprints on the quickbar (by default).
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2022-07-15
  Changes:
    - Bumped Pavement Drive Assist Continued mod version requirement.
    - Driving assistant and cruise control (from Pavement Drive Assist Continued) no longer require technology to be researched.
    - Disabld smart roads (from Pavement Drive Assist Continued).
    - Enable toggle notifications for cruise control and driving assistant (from Pavement Drive Assist Continued). New version makes them slightly less annoying sound-wise.
  Features:
    - Vehicles
      - Personal shuttle trains (via "Shuttle Train Refresh")
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2022-07-08
  Changes:
    - Cleanup range for Even Distribution mod has been limited to default character reach through map settings (make sure to reset the mod setting if necessary).
    - Auto-approvals for Construction Planner mod are now enabled when starting the game. It might be a bit less confusing for the player to start in vanilla-default state.