@@ -68,6 +68,10 @@ local control_overrides = {
         { name = "fp_toggle_pause", key_sequence = "", alternative_key_sequence = "" },
         { name = "fp_floor_up", key_sequence = "", alternative_key_sequence = "" }
     },
+    ['Fill4Me'] = {
+        -- Clear binding for single entity reload. Not sure how useful it really is.
+        { name = "fill4me-keybind-reload", key_sequence = "", alternative_key_sequence = "" },
+    },
     ['ghost-counter'] = {
         { name = "ghost-counter-selection-hotkey", key_sequence = "ALT + X", alternative_key_sequence = "" },
         { name = "ghost-counter-blueprint-hotkey", key_sequence = "SHIFT + X", alternative_key_sequence = "" }
