@@ -32,6 +32,7 @@
         "factoryplanner >= 1.1.50",
         "FactorySearch >= 1.8.0",
         "far-reach >= 1.1.2",
+        "Fill4Me >= 0.10.0",
         "FluidWagonColorMask >= 1.1.0",
         "ghost-counter >= 1.1.9",
         "Gun_Turret_Alerts >= 1.1.9",
